Item12878: first try to fix padding in jqgrid cells; better alignment of fontawesome icons
git-svn-id: http://svn.foswiki.org/trunk@17608 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/fontawesome/fontawesome.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/fontawesome/fontawesome.uncompressed.css
@@ -1347,7 +1347,7 @@
   line-height:inherit;
 }
 .fa {
-  vertical-align:middle;
+  vertical-align:baseline;
 }
 
 
