--- a/JQueryPlugin/pub/System/JQueryPlugin/themes/foswiki/jquery-ui.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/themes/foswiki/jquery-ui.uncompressed.css
@@ -1617,10 +1617,6 @@ table.ui-datepicker-inline {
 .ui-jqgrid .ui-jqgrid-bdiv td {
   background-color:transparent;
 }
-.ui-jqgrid .ui-jqgrid-htable th:first-child {
-  padding-left:0;
-  padding-right:0;
-}
 .ui-jqgrid,
 .ui-jqgrid .ui-priority-secondary,
 .ui-jqgrid .ui-priority-secondary td,
